--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build]
+rustflags = ["-Z", "threads=14"]
+
 [dependencies]
 bytemuck = {version="1.14.0", features=["derive"]}
+evenio = "0.6.0"
 nalgebra = {version="0.32.5", features=["bytemuck"]}
+ndarray = "0.15.6"
 pollster = "0.3"
 rand = "0.8.5"
 simba = "0.8.1"
