idk switching to bevy ecs again

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ rustflags = ["-Z", "threads=14"]
 
 [dependencies]
 bytemuck = {version="1.14.0", features=["derive"]}
-evenio = "0.6.0"
 nalgebra = {version="0.32.5", features=["bytemuck"]}
 ndarray = "0.15.6"
 pollster = "0.3"
@@ -18,4 +17,6 @@ rand = "0.8.5"
 simba = "0.8.1"
 smaa = "0.14.0"
 wgpu = "0.20"
+bevy_ecs = "0.13.2"
+bevy_derive = "0.13.2"
 winit = {version="0.30", features=["serde"]}
