--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,10 @@ ndarray = "0.15.6"
 pollster = "0.3"
 rand = "0.8.5"
 simba = "0.8.1"
+simdnoise = "3.1.6"
 smaa = "0.14.0"
 wgpu = "0.20.1"
 bevy_ecs = "0.13.2"
 bevy_derive = "0.13.2"
 winit = {version="0.30.1", features=["serde"]}
+block-mesh = "0.2.0"
