--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ bevy_ecs = "0.13.2"
 bevy_derive = "0.13.2"
 winit = {version="0.30.1", features=["serde"]}
 block-mesh = "0.2.0"
+rustc-hash = "2.0.0"
