--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,11 @@ ndarray = "0.15.6"
 pollster = "0.3"
 rand = "0.8.5"
 simba = "0.8.1"
-simdnoise = "3.1.6"
 wgpu = "22.0.0"
 bevy_ecs = "0.13.2"
 bevy_derive = "0.13.2"
 winit = {version="0.30.1", features=["serde"]}
 block-mesh = "0.2.0"
 rustc-hash = "2.0.0"
+vulkano = "0.34.1"
+fastnoise-simd = "0.1.1"
