--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,4 @@ winit = {version="0.30.1", features=["serde"]}
 block-mesh = "0.2.0"
 rustc-hash = "2.0.0"
 vulkano = "0.34.1"
-fastnoise-simd = "0.1.1"
+simdnoise = { git = "https://github.com/valadaptive/rust-simd-noise", rev = "965175f" }
